--- a/BodegaMovil.WebAPI/appsettings.json
+++ b/BodegaMovil.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cnnMySql": "Server=localhost;Database=ferre;User ID=root;Password=12345678"
+  }
 }
