--- a/Plugins/BodegaMovil.Plugins.DataStore.WebApi/BodegaMovil.Plugins.DataStore.WebApi.csproj
+++ b/Plugins/BodegaMovil.Plugins.DataStore.WebApi/BodegaMovil.Plugins.DataStore.WebApi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net8.0;net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
@@ -26,6 +26,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\BodegaMovil.CoreBusiness\BodegaMovil.CoreBusiness.csproj" />
 	  <ProjectReference Include="..\..\BodegaMovil.UseCases\BodegaMovil.UseCases.csproj" />
+	  <ProjectReference Include="..\..\BodegaMovil.WebAPI\BodegaMovil.WebAPI.csproj" />
 	</ItemGroup>
 
 </Project>
