Pasan la primera etapa de Test los repositorios y los casos de uso

--- a/BodegaMovil/BodegaMovil.csproj
+++ b/BodegaMovil/BodegaMovil.csproj
@@ -63,4 +63,9 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	  <Folder Include="ViewModels\" />
+	</ItemGroup>
+
 </Project>
