--- a/BodegaMovil/BodegaMovil.csproj
+++ b/BodegaMovil/BodegaMovil.csproj
@@ -34,11 +34,15 @@
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">26.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-android|AnyCPU'">
+	  <AndroidPackageFormat>apk</AndroidPackageFormat>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -71,7 +75,6 @@
 	  <ProjectReference Include="..\BodegaMovil.CoreBusiness\BodegaMovil.CoreBusiness.csproj" />
 	  <ProjectReference Include="..\BodegaMovil.UseCases\BodegaMovil.UseCases.csproj" />
 	  <ProjectReference Include="..\Plugins\BodegaMovil.Plugins.DataStore.SQLServer\BodegaMovil.Plugins.DataStore.MySQL.csproj" />
-	  <ProjectReference Include="..\Plugins\BodegaMovil.Plugins.DataStore.WebApi\BodegaMovil.Plugins.DataStore.WebApi.csproj" />
 	  <ProjectReference Include="..\Services\BodegaMovil.Services.Maps.AutoMapper\BodegaMovil.Services.Maps.AutoMapper.csproj" />
 	  <ProjectReference Include="..\Services\BodegaMovil.Services.Settings.Preferences\BodegaMovil.Services.Settings.Preferences.csproj" />
 	</ItemGroup>
